compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__javascript_unsafe_int_hex.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2744
expression: "\npub fn go() {\n  [\n    0x1FFFFFFFFFFFFE,\n    0x1FFFFFFFFFFFFF,\n    0x20000000000000,\n  ]\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  [
    0x1FFFFFFFFFFFFE,
    0x1FFFFFFFFFFFFF,
    0x20000000000000,
  ]
}


----- WARNING
warning: Int is outside JavaScript's safe integer range
  ┌─ /src/warning/wrn.gleam:6:5
  │
6 │     0x20000000000000,
  │     ^^^^^^^^^^^^^^^^ This is not a safe integer value on JavaScript

This integer value is too large to be represented accurately by
JavaScript's number type. To avoid this warning integer values must be in
the range -(2^53 - 1) - (2^53 - 1).

See JavaScript's Number.MAX_SAFE_INTEGER and Number.MIN_SAFE_INTEGER
properties for more information.
