compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__javascript_unsafe_int_in_tuple.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2759
expression: "\npub fn go() {\n  #(9_007_199_254_740_992)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go() {
  #(9_007_199_254_740_992)
}


----- WARNING
warning: Int is outside JavaScript's safe integer range
  ┌─ /src/warning/wrn.gleam:3:5
  │
3 │   #(9_007_199_254_740_992)
  │     ^^^^^^^^^^^^^^^^^^^^^ This is not a safe integer value on JavaScript

This integer value is too large to be represented accurately by
JavaScript's number type. To avoid this warning integer values must be in
the range -(2^53 - 1) - (2^53 - 1).

See JavaScript's Number.MAX_SAFE_INTEGER and Number.MIN_SAFE_INTEGER
properties for more information.
