compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__javascript_unsafe_int_segment_in_const_bit_array.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2805
expression: "\npub const i = <<9_007_199_254_740_992:64>>\n"
snapshot_kind: text
---
----- SOURCE CODE

pub const i = <<9_007_199_254_740_992:64>>


----- WARNING
warning: Int is outside JavaScript's safe integer range
  ┌─ /src/warning/wrn.gleam:2:17
  │
2 │ pub const i = <<9_007_199_254_740_992:64>>
  │                 ^^^^^^^^^^^^^^^^^^^^^ This is not a safe integer value on JavaScript

This integer value is too large to be represented accurately by
JavaScript's number type. To avoid this warning integer values must be in
the range -(2^53 - 1) - (2^53 - 1).

See JavaScript's Number.MAX_SAFE_INTEGER and Number.MIN_SAFE_INTEGER
properties for more information.
